--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profi
 <B> MENU </B>
 
 <UL>
-<LI><A HREF="QUEM SOU EU.html"> QUEM SOU EU</A>
-<LI><A HREF="ESCOLARIDADE.html">ESCOLARIDADE</A>
-<LI><A HREF="EXPERIENCIAS.html">EXPERIENCIAS</A>
-<LI><A HREF="OBJETIVO PROFISSIONAL.html">OBJETIVO PROFISSIONAL</A>
-<LI><A HREF="INFORMAÇÕES ADICIONAIS.html">INFORMAÇÕES ADICIONAIS</A>
+<LI><A HREF="F:\PROGRAMADOR WEB\site\home_pages\QUEM SOU EU.html"> QUEM SOU EU</A>
+<LI><A HREF="https://github.com/emersonbomfim/menu/blob/dd036ef6848e4437a7e9265cfd6a55b6c216d2f6/ESCOLARIDADE.html">ESCOLARIDADE</A>
+<LI><A HREF="https://github.com/emersonbomfim/menu/blob/dd036ef6848e4437a7e9265cfd6a55b6c216d2f6/EXPERIENCIAS.html">EXPERIENCIAS</A>
+<LI><A HREF="https://github.com/emersonbomfim/menu/blob/dd036ef6848e4437a7e9265cfd6a55b6c216d2f6/OBJETIVO%20PROFISSIONAL.html">OBJETIVO PROFISSIONAL</A>
+<LI><A HREF="F:\PROGRAMADOR WEB\site\home_pages\INFORMAÇÕES ADICIONAIS.html">INFORMAÇÕES ADICIONAIS</A>
 </UL>
 </FONT>
 <BR>
