--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profi
 <LI><A HREF="QUEM SOU EU.html"> QUEM SOU EU</A>
 <LI><A HREF="ESCOLARIDADE.html">ESCOLARIDADE</A>
 <LI><A HREF="EXPERIENCIAS.html">EXPERIENCIAS</A>
-<LI><A HREF="OBJETIVO%20PROFISSIONAL.html">OBJETIVO PROFISSIONAL</A>
+<LI><A HREF="OBJETIVO PROFISSIONAL.html">OBJETIVO PROFISSIONAL</A>
 <LI><A HREF="INFORMAÇÕES ADICIONAIS.html">INFORMAÇÕES ADICIONAIS</A>
 </UL>
 </FONT>
