--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profi
 <UL>
 <LI><A HREF="QUEM SOU EU.html"> QUEM SOU EU</A>
 <LI><A HREF="ESCOLARIDADE.html">ESCOLARIDADE</A>
-<LI><A HREF="EXPERIENCIAS.html">EXPERIENCIAS</A>
+<LI><A HREF="EXPERIÊNCIAS.html">EXPERIÊNCIAS</A>
 <LI><A HREF="OBJETIVO PROFISSIONAL.html">OBJETIVO PROFISSIONAL</A>
 <LI><A HREF="INFORMAÇÕES ADICIONAIS.html">INFORMAÇÕES ADICIONAIS</A>
 </UL>
