--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPEhtml >
-<html  lang="pt" >
+<HTML>
 <HEAD>
  <META CHARSET="utf-8">
 <TITLE>Menu</TITLE>
@@ -16,14 +15,13 @@
         }
     </style>
 
-<link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
 
-<BODY>
+<BODY style="background-color:#40E0D0;">
 <FONT SIZE="5">
 <BR>
 Olá meu nome é Emerson Bomfim. <BR>
-Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas costumo dizer que minha vida é um livro aberto, entao para que melhor que um site com tudo meu?  
+Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas, costumo dizer que minha vida é um livro aberto, então nada melhor que um site com tudo meu não é verdade?  
 <BR><BR>
 <HR>
 
@@ -32,16 +30,15 @@ Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profi
 <UL>
 <LI><A HREF="QUEM SOU EU.html"> QUEM SOU EU</A>
 <LI><A HREF="ESCOLARIDADE.html">ESCOLARIDADE</A>
-<LI><A HREF="EXPERIÊNCIA.html">EXPERIÊNCIAS</A>
-<LI><A HREF="OBJETIVO.html">OBJETIVO PROFISSIONAL</A>
+<LI><A HREF="EXPERIENCIAS.html">EXPERIENCIAS</A>
+<LI><A HREF="OBJETIVO PROFISSIONAL.html">OBJETIVO PROFISSIONAL</A>
 <LI><A HREF="INFORMAÇÕES ADICIONAIS.html">INFORMAÇÕES ADICIONAIS</A>
 </UL>
 </FONT>
 <BR>
 <HR>
 
-<LI><A HREF="menu.html">Voltar ao início</A>
-<HR>
+
 <DIV CLASS="azul">
 <BR>
 <P><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
