--- a/QUEM SOU EU.html
+++ b/QUEM SOU EU.html
@@ -24,12 +24,16 @@
 <BR>
 <FONT SIZE="5">
 
+<IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="200" border="2">
+
 &nbsp;   Olá meu nome é Emerson Bomfim. <BR>
 &nbsp;   Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas costumo dizer que minha vida é um livro aberto, entao para que melhor que um site com tudo meu? <BR>
 &nbsp;   Sou evangelico.<BR>
 &nbsp;   Tenho 27 anos.<BR>
-&nbsp;   Atualmente estou noivo da mulher mais linda do mundo, e breve iremos nos casar. <BR>
+&nbsp;   Atualmente estou noivo da mulher mais linda do mundo, e breve iremos nos casar.<BR> 
 &nbsp;   Nessa vida ja fiz um pouco de tudo:<BR>
+
+<IMG SRC="imagens\imagem2.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="370" border="2">
 
 <UL>
 <LI>sonoplasta<BR>
@@ -42,14 +46,24 @@
 <LI>camareiro<BR>
 <LI>pedreiro<BR>
 <LI>ajudante de pedreiro<BR>
+<LI>escritor<BR>
+<LI>estudante<BR>
+<LI>professor<BR>
+
+<IMG SRC="imagens\imagem3.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="250" border="2">
+
 <LI>dentre outros<BR>
 </UL>
 
+
+
 &nbsp;   Hoje estou em uma empresa que estou mais para um faz tudo, aquele famoso bombril, e além disso atuo como professor.<BR>
 &nbsp;   O que me anima? Estar na presença de DEUS em todo o tempo.<BR>
-&nbsp;   O que nao me deixa desistir? DEUS.<BR>
+&nbsp;   O que não me deixa desistir? DEUS.<BR>
+&nbsp;   Como mantenho tanta atividade sem enlouquecer, e dar conta de tudo? A unica explicação que tenho é que se não fosse DEUS na minha vida, eu nada saberia e nem poderia fazer. 
 &nbsp;   
-
+<BR>
+<BR>
 </FONT>
 <HR>
 <BR>
