--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 <BODY style="background-color:#40E0D0;">
 <FONT SIZE="5">
 <BR>
+
 Olá meu nome é Emerson Bomfim. <BR>
 Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas, costumo dizer que minha vida é um livro aberto, então nada melhor que um site com tudo meu não é verdade?  
 <BR><BR>
 <HR>
 
 <B> MENU </B>
+
+<IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="200" border="2">
 
 <UL>
 <LI><A HREF="QUEM SOU EU.html"> QUEM SOU EU</A>
