--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profi
 
 <DIV CLASS="azul">
 <BR>
-<P><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
+<P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
 
 </BODY>
 </HTML>	
