--- a/QUEM SOU EU.html
+++ b/QUEM SOU EU.html
@@ -51,7 +51,7 @@
 <LI>professor<BR>
 
 <IMG SRC="imagens\imagem3.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="250" border="2">
-
+<LI>youtuber<BR>
 <LI>dentre outros<BR>
 </UL>
 
