--- a/QUEM SOU EU.html
+++ b/QUEM SOU EU.html
@@ -24,7 +24,7 @@
 <BR>
 <FONT SIZE="5">
 
-<IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="200" border="2">
+<IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="200" style="border: #FF0000 solid 2px;">
 
 &nbsp;   Olá meu nome é Emerson Bomfim. <BR>
 &nbsp;   Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas costumo dizer que minha vida é um livro aberto, entao para que melhor que um site com tudo meu? <BR>
@@ -33,7 +33,7 @@
 &nbsp;   Atualmente estou noivo da mulher mais linda do mundo, e breve iremos nos casar.<BR> 
 &nbsp;   Nessa vida ja fiz um pouco de tudo:<BR>
 
-<IMG SRC="imagens\imagem2.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="370" border="2">
+<IMG SRC="imagens\imagem2.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="370" style="border: #FF0000 solid 2px;">
 
 <UL>
 <LI>sonoplasta<BR>
@@ -50,7 +50,8 @@
 <LI>estudante<BR>
 <LI>professor<BR>
 
-<IMG SRC="imagens\imagem3.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="250" border="2">
+<IMG SRC="imagens\imagem3.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="250" style="border: #FF0000 solid 2px;">
+
 <LI>youtuber<BR>
 <LI>dentre outros<BR>
 </UL>
