--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -22,6 +22,9 @@
 <HR> 
 <FONT SIZE="4">
 
+<U><B>Professor de Sistemas </U></B><BR>
+Empresa: SENAC.<BR>
+Período - 03/2022 – 06/2022<BR><BR>
 
 <U><B>Professor Programador <I>Web</I></U></B><BR>
 Empresa: SENAC.<BR>
@@ -50,7 +53,7 @@ Período - 06/2013 – 08/2014<BR>
 </FONT>
 <HR>
 
-<LI><A HREF="index.html">Voltar ao início</A>
+<LI><A HREF="menu.html">Voltar ao início</A>
 <HR>
 <DIV CLASS="azul">
 <BR>
