--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -22,7 +22,7 @@
 <HR> 
 <FONT SIZE="4">
 
-<U><B>Professor de Sistemas </U></B><BR>
+<U><B>Professor Programador de Sistemas </U></B><BR>
 Empresa: SENAC.<BR>
 Período - 03/2022 – 06/2022<BR><BR>
 
