--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -39,27 +39,26 @@ Empresa: Colégio Estadual Francisco da Conceição Menezes.<BR>
 Período - 02/2019 – 07/2019<BR><BR>
 
 <U><B>Web Design</U></B><BR>
-Empresa: Multivolts Segurança Eletrônica e Informática<BR>
+Empresa: Multivolts Segurança Eletrônica e Informática.<BR>
 Período - 05/2017 – Atual<BR><BR>
 
 <U><B>Analista de Vendas / Auxiliar de Vendas</U></B><BR>
-Empresa: Brasil Kirin - Vale das Palmeiras<BR>
+Empresa: Brasil Kirin - Vale das Palmeiras.<BR>
 Período - 09/2014 – 11/2016<BR><BR>
 
 <U><B>Auxiliar Administrativo</U></B><BR>
-Empresa SAEB / CIEE / SAC<BR>
+Empresa: SAEB / CIEE / SAC.<BR>
 Período - 06/2013 – 08/2014<BR>
 <BR><BR>
 </FONT>
 <HR>
 
-<LI><A HREF="menu.html">Voltar ao início</A>
+<LI><A HREF="menu.html">Voltar ao início.</A>
 <HR>
-<DIV CLASS="azul">
+
+<DIV CLASS=preto>
 <BR>
-<P><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
-
-
+<P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
 
 </BODY>
 </HTML>
