--- a/INFORMAÇÕES ADICIONAIS.html
+++ b/INFORMAÇÕES ADICIONAIS.html
@@ -1,49 +1,43 @@
 <HTML>
 <HEAD>
  <META CHARSET="utf-8">
-<TITLE>OBJETIVO PROFISSIONAL</TITLE>
-<style type="text/css">
-              
-              .azul{
-            background-color: blue;
-        }
-        .vermelho{
-            background: #FF0000;
-        }
-        .verde{
-            background: rgb(0,255,0);
-        }
-    </style>
+<TITLE>INFORMAÇÕES ADICIONAIS</TITLE>
+
 
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
 <BODY>
-<H1>OBJETIVO PROFISSIONAL</H1>
+<H1>INFORMAÇÕEA ADICIONAIS</H1>
 <BR>
 <HR>
 <BR>
 <FONT SIZE="5">
-<UL><LI><U><B>Palestrante na FACEMP (Faculdade de Ciências e Empreendedorismo)</U></B></UL>
+
+<UL>
+<LI><U><B>Palestrante na FACEMP (Faculdade de Ciências e Empreendedorismo)</U></B></UL>
 <PRE>
   Tema: Inclusão Digital<BR> 
   Público: 5° Semestre Ciências Contábeis<BR>
 </PRE>
-<UL><LI><U><B>Escritor do livro: Ser Cristão é difícil, mas não impossível</U></B></UL>
+
+<UL>
+<LI><U><B>Escritor do livro: Ser Cristão é difícil, mas não impossível</U></B></UL>
 <PRE>
   Editora: Amazon<BR>
   ASIN: B08NF2Z8Z3<BR>
   Ano: 2020
-</PRE>		
+</PRE>
+		
 <BR>
 </FONT>
 <BR>
 <HR>
 
-<LI><A HREF="index.html">Voltar ao início</A>
+<LI><A HREF="menu.html">Voltar ao início</A>
 <HR>
-<DIV CLASS="azul">
+<DIV CLASS=PRETO>
 <BR>
-<P><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
+<P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
 
 </BODY>
 </HTML>
