--- a/OBJETIVO PROFISSIONAL.html
+++ b/OBJETIVO PROFISSIONAL.html
@@ -2,20 +2,8 @@
 <HEAD>
  <META CHARSET="utf-8">
 <TITLE>OBJETIVO PROFISSIONAL</TITLE>
-<style type="text/css">
-              
-              .azul{
-            background-color: blue;
-        }
-        .vermelho{
-            background: #FF0000;
-        }
-        .verde{
-            background: rgb(0,255,0);
-        }
-    </style>
-
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
+
 </HEAD>
 <BODY>
 <H1>OBJETIVO PROFISSIONAL</H1>
@@ -29,11 +17,11 @@ Colaborar com a empresa/organização onde possa colocar em prática meus conhec
 <BR>
 <HR>
 
-<LI><A HREF="index.html">Voltar ao início</A>
+<LI><A HREF="menu.html">Voltar ao início</A>
 <HR>
-<DIV CLASS="azul">
+<DIV CLASS=preto>
 <BR>
-<P><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
+<P class=p1><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
 
 </BODY>
 </HTML>
