--- a/QUEM SOU EU.html
+++ b/QUEM SOU EU.html
@@ -77,9 +77,10 @@
 
 <LI><A HREF="index.html">Voltar ao início</A>
 <HR>
-<DIV CLASS="azul">
+
+<DIV CLASS=preto>
 <BR>
-<P><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
+<P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
 
 </BODY>
 </HTML>
