--- a/index.html
+++ b/index.html
@@ -2,47 +2,45 @@
 <HEAD>
  <META CHARSET="utf-8">
 <TITLE>Menu</TITLE>
-<style type="text/css">
-              
-              .azul{
-            background-color: blue;
-        }
-        .vermelho{
-            background: #FF0000;
-        }
-        .verde{
-            background: rgb(0,255,0);
-        }
-    </style>
+<link rel="stylesheet" type="text/css" href="estilo.css"/>
 
 </HEAD>
 
-<BODY style="background-color:#40E0D0;">
-<FONT SIZE="5">
-<BR>
+<BODY >
+<div class=tifany>
 
-Olá meu nome é Emerson Bomfim. <BR>
-Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas, costumo dizer que minha vida é um livro aberto, então nada melhor que um site com tudo meu não é verdade?  
+
+
+<p class=p2>Olá meu nome é Emerson Bomfim.</p>
+
+<p class=p2>Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas, costumo dizer que minha vida é um livro aberto, então nada melhor que um site com tudo meu não é verdade? 
 <BR><BR>
 <HR>
 
-<B> MENU </B>
+<IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" width="300" height="200" border="2">
 
-<IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" ALIGN="right" width="300" height="200" border="2">
+<iframe name="iframe1" src="IMAGEM.html" WIDTH="950" HEIGHT="400" ALIGN="right"></iframe>
 
-<UL>
-<LI><A HREF="QUEM SOU EU.html"> QUEM SOU EU</A>
-<LI><A HREF="ESCOLARIDADE.html">ESCOLARIDADE</A>
-<LI><A HREF="EXPERIENCIAS.html">EXPERIENCIAS</A>
-<LI><A HREF="OBJETIVO PROFISSIONAL.html">OBJETIVO PROFISSIONAL</A>
-<LI><A HREF="INFORMAÇÕES ADICIONAIS.html">INFORMAÇÕES ADICIONAIS</A>
+<UL CLASS=p1>
+
+<LI><a href="QUEM SOU EU.html" target="iframe1"><FONT COLOR="black">QUEM SOU EU</FONT></a><br><br>
+
+<LI><a href="ESCOLARIDADE.html" target="iframe1"><FONT COLOR="black">ESCOLARIDADE</FONT></a><br><br>
+
+<LI><a href="EXPERIENCIAS.html" target="iframe1"><FONT COLOR="black">EXPERIÊNCIAS</FONT></a><br><br> 
+
+<LI><a href="OBJETIVO PROFISSIONAL.html" target="iframe1"><FONT COLOR="black">OBJETIVO PROFISSIONAL</FONT></a><br><br>
+
+<LI><a href="INFORMAÇÕES ADICIONAIS.html" target="iframe1"><FONT COLOR="black">INFORMAÇÕES ADICIONAIS</FONT></a><br><br>
+
 </UL>
 </FONT>
 <BR>
 <HR>
 
+</div>
 
-<DIV CLASS="azul">
+<DIV CLASS=preto>
 <BR>
 <P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
 
