--- a/ESCOLARIDADE.html
+++ b/ESCOLARIDADE.html
@@ -35,11 +35,13 @@
 </FONT>
 <HR>
 
-<LI><A HREF="index.html">Voltar ao início</A>
+<LI><A HREF="menu.html">Voltar ao início</A>
 <HR>
-<DIV CLASS="azul">
+
+<DIV CLASS=preto>
 <BR>
-<P><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
+<P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
+
 </BODY>
 </HTML>
 
