--- a/ESCOLARIDADE.html
+++ b/ESCOLARIDADE.html
@@ -2,22 +2,13 @@
 <HEAD>
  <META CHARSET="utf-8">
 <TITLE>ESCOLARIDADE</TITLE>
-<style type="text/css">
-              
-              .azul{
-            background-color: blue;
-        }
-        .vermelho{
-            background: #FF0000;
-        }
-        .verde{
-            background: rgb(0,255,0);
-        }
-    </style>
 
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
 <BODY>
+
+<DIV class=fundo1>
+
 <H1>ESCOLARIDADE</H1>
 
 <HR>
@@ -35,8 +26,9 @@
 </FONT>
 <HR>
 
-<LI><A HREF="menu.html">Voltar ao início</A>
-<HR>
+
+
+</DIV>
 
 <DIV CLASS=preto>
 <BR>
