--- a/INFORMAÇÕES ADICIONAIS.html
+++ b/INFORMAÇÕES ADICIONAIS.html
@@ -7,7 +7,10 @@
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
 <BODY>
-<H1>INFORMAÇÕEA ADICIONAIS</H1>
+
+<DIV class=fundo1>
+
+<H1>INFORMAÇÕES ADICIONAIS</H1>
 <BR>
 <HR>
 <BR>
@@ -33,8 +36,9 @@
 <BR>
 <HR>
 
-<LI><A HREF="menu.html">Voltar ao início</A>
-<HR>
+
+</DIV>
+
 <DIV CLASS=PRETO>
 <BR>
 <P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
