--- a/QUEM SOU EU.html
+++ b/QUEM SOU EU.html
@@ -2,22 +2,12 @@
 <HEAD>
  <META CHARSET="utf-8">
 <TITLE>QUEM SOU EU?</TITLE>
-<style type="text/css">
-              
-              .azul{
-            background-color: blue;
-        }
-        .vermelho{
-            background: #FF0000;
-        }
-        .verde{
-            background: rgb(0,255,0);
-        }
-    </style>
 
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
+
 <BODY>
+<DIV CLASS=fundo1>
 <H1>QUEM SOU EU?</H1>
 <BR>
 <HR>
@@ -75,8 +65,8 @@
 <BR><BR>
 <HR>
 
-<LI><A HREF="index.html">Voltar ao início</A>
-<HR>
+
+</DIV>
 
 <DIV CLASS=preto>
 <BR>
