--- a/index.html
+++ b/index.html
@@ -7,40 +7,45 @@
 </HEAD>
 
 <BODY >
-<div class=tifany>
 
-
+<div class=b1>
 
 <p class=p2>Olá meu nome é Emerson Bomfim.</p>
 
 <p class=p2>Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas, costumo dizer que minha vida é um livro aberto, então nada melhor que um site com tudo meu não é verdade? 
-<BR><BR>
-<HR>
-
-<IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" width="300" height="200" border="2">
-
-<iframe name="iframe1" src="IMAGEM.html" WIDTH="950" HEIGHT="400" ALIGN="right"></iframe>
-
-<UL CLASS=p1>
-
-<LI><a href="QUEM SOU EU.html" target="iframe1"><FONT COLOR="black">QUEM SOU EU</FONT></a><br><br>
-
-<LI><a href="ESCOLARIDADE.html" target="iframe1"><FONT COLOR="black">ESCOLARIDADE</FONT></a><br><br>
-
-<LI><a href="EXPERIENCIAS.html" target="iframe1"><FONT COLOR="black">EXPERIÊNCIAS</FONT></a><br><br> 
-
-<LI><a href="OBJETIVO PROFISSIONAL.html" target="iframe1"><FONT COLOR="black">OBJETIVO PROFISSIONAL</FONT></a><br><br>
-
-<LI><a href="INFORMAÇÕES ADICIONAIS.html" target="iframe1"><FONT COLOR="black">INFORMAÇÕES ADICIONAIS</FONT></a><br><br>
-
-</UL>
-</FONT>
 <BR>
 <HR>
 
 </div>
 
+
+<div class=royal>
+
+<IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" width="300" height="200" border="2">
+
+<iframe name="iframe1" src="imagem.html" WIDTH="950" HEIGHT="400" ALIGN="right"></iframe>
+
+<UL CLASS=p1>
+
+<LI><a href="QUEM SOU EU.html" target="iframe1"><FONT COLOR="WHITE">QUEM SOU EU</FONT></a><br><br>
+
+<LI><a href="ESCOLARIDADE.html" target="iframe1"><FONT COLOR="WHITE">ESCOLARIDADE</FONT></a><br><br>
+
+<LI><a href="EXPERIENCIAS.html" target="iframe1"><FONT COLOR="WHITE">EXPERIÊNCIAS</FONT></a><br><br> 
+
+<LI><a href="OBJETIVO PROFISSIONAL.html" target="iframe1"><FONT COLOR="WHITE">OBJETIVO PROFISSIONAL</FONT></a><br><br>
+
+<LI><a href="INFORMAÇÕES ADICIONAIS.html" target="iframe1"><FONT COLOR="WHITE">INFORMAÇÕES ADICIONAIS</FONT></a><br><br>
+
+</UL>
+</FONT>
+
+<HR>
+
+</div>
+
 <DIV CLASS=preto>
+
 <BR>
 <P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
 
