--- a/IMAGEM.html
+++ b/IMAGEM.html
@@ -1,14 +1,12 @@
 <HTML>
 <META CHARSET="UTF-8">
 <HEAD>
-<TITLE>CURRICULO DE ALUNOS</TITLE>
+<TITLE>IMAGEM</TITLE>
 
-<HEAD>
+<link rel="stylesheet" type="text/css" href="estilo.css"/>
+</HEAD>
 
 <BODY>
-
-
-
 
 
 
