--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" width="300" height="200" border="2">
 
-<iframe name="iframe1" src="imagem.html" WIDTH="950" HEIGHT="400" ALIGN="right"></iframe>
+<iframe name="iframe1" src="IMAGEM.html" WIDTH="950" HEIGHT="400" ALIGN="right"></iframe>
 
 <UL CLASS=p1>
 
