--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
  <META CHARSET="utf-8">
-<TITLE>Experiência Profissional</TITLE>
+<TITLE>EXPERIÊNCIA PROFISSIONAL</TITLE>
 
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
@@ -9,10 +9,10 @@
 
 <DIV class=fundo1>
 
-<H1>Experiência Profissional</H1>
+<H1>EXPERIÊNCIA PROFISSIONAL</H1>
 <HR> 
 <FONT SIZE="4">
-
+<UL>
 <U><B>Professor Programador de Sistemas </U></B><BR>
 Empresa: SENAC.<BR>
 Período - 03/2022 – 06/2022<BR><BR>
@@ -42,14 +42,13 @@ Empresa: SAEB / CIEE / SAC.<BR>
 Período - 06/2013 – 08/2014<BR>
 <BR><BR>
 </FONT>
+</UL>
 <HR>
 
 
 </DIV>
 
-<DIV CLASS=preto>
-<BR>
-<P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
+
 
 </BODY>
 </HTML>
