--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -45,6 +45,8 @@ Período - 06/2013 – 08/2014<BR>
 </UL>
 <HR>
 
+&larr; <A HREF="index.html"><FONT COLOR="BLACK">Voltar ao início</FONT></A>
+<HR>
 
 </DIV>
 
