--- a/OBJETIVO PROFISSIONAL.html
+++ b/OBJETIVO PROFISSIONAL.html
@@ -21,11 +21,10 @@ Colaborar com a empresa/organização onde possa colocar em prática meus conhec
 <BR>
 <HR>
 
-
+&larr; <A HREF="index.html"><FONT COLOR="BLACK">Voltar ao início</FONT></A>
 <HR>
+
 </DIV>
-
-
 </BODY>
 </HTML>
 
