--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <BODY >
 
-<div class=b1>
+<div class=royal>
 
 <p class=p2>Olá meu nome é Emerson Bomfim.</p>
 
@@ -23,19 +23,17 @@
 
 <IMG SRC="imagens\imagem1.jpeg" alt="Foto de Emerson" width="300" height="200" border="2">
 
-<iframe name="iframe1" src="IMAGEM.html" WIDTH="950" HEIGHT="400" ALIGN="right"></iframe>
-
 <UL CLASS=p1>
 
-<LI><a href="QUEM SOU EU.html" target="iframe1"><FONT COLOR="WHITE">QUEM SOU EU</FONT></a><br><br>
+<LI><a href="QUEM SOU EU.html"><FONT COLOR="WHITE">QUEM SOU EU</FONT></a><br><br>
 
-<LI><a href="ESCOLARIDADE.html" target="iframe1"><FONT COLOR="WHITE">ESCOLARIDADE</FONT></a><br><br>
+<LI><a href="ESCOLARIDADE.html"><FONT COLOR="WHITE">ESCOLARIDADE</FONT></a><br><br>
 
-<LI><a href="EXPERIENCIAS.html" target="iframe1"><FONT COLOR="WHITE">EXPERIÊNCIAS</FONT></a><br><br> 
+<LI><a href="EXPERIENCIAS.html"><FONT COLOR="WHITE">EXPERIÊNCIAS</FONT></a><br><br> 
 
-<LI><a href="OBJETIVO PROFISSIONAL.html" target="iframe1"><FONT COLOR="WHITE">OBJETIVO PROFISSIONAL</FONT></a><br><br>
+<LI><a href="OBJETIVO PROFISSIONAL.html"><FONT COLOR="WHITE">OBJETIVO PROFISSIONAL</FONT></a><br><br>
 
-<LI><a href="INFORMAÇÕES ADICIONAIS.html" target="iframe1"><FONT COLOR="WHITE">INFORMAÇÕES ADICIONAIS</FONT></a><br><br>
+<LI><a href="INFORMAÇÕES ADICIONAIS.html"><FONT COLOR="WHITE">INFORMAÇÕES ADICIONAIS</FONT></a><br><br>
 
 </UL>
 </FONT>
