--- a/ESCOLARIDADE.html
+++ b/ESCOLARIDADE.html
@@ -27,7 +27,10 @@
 <HR>
 
 
-&larr; <A HREF="index.html"><FONT COLOR="BLACK">Voltar ao início</FONT></A>
+<A HREF="QUEM SOU EU.html"><FONT COLOR="BLACK">&larr; Anterior</FONT></A>
+<A HREF="index.html"><FONT COLOR="BLACK">&uarr; Voltar ao início &uarr;</FONT></A>
+<A HREF="EXPERIENCIAS.html"><FONT COLOR="BLACK">Próximo &rarr;</FONT></A>
+
 <HR>
 
 </DIV>
