--- a/INFORMAÇÕES ADICIONAIS.html
+++ b/INFORMAÇÕES ADICIONAIS.html
@@ -36,7 +36,10 @@
 <BR>
 <HR>
 
-&larr; <A HREF="index.html"><FONT COLOR="BLACK">Voltar ao início</FONT></A>
+
+<A HREF="OBJETIVO PROFISSIONAL.html"><FONT COLOR="BLACK">&larr; Anterior</FONT></A> 
+<A HREF="index.html"><FONT COLOR="BLACK">&uarr; Voltar ao início &uarr;</FONT></A>
+
 <HR>
 
 </DIV>
