--- a/OBJETIVO PROFISSIONAL.html
+++ b/OBJETIVO PROFISSIONAL.html
@@ -21,7 +21,9 @@ Colaborar com a empresa/organização onde possa colocar em prática meus conhec
 <BR>
 <HR>
 
-&larr; <A HREF="index.html"><FONT COLOR="BLACK">Voltar ao início</FONT></A>
+<A HREF="EXPERIENCIAS.html"><FONT COLOR="BLACK">&larr; Anterior</FONT></A>
+<A HREF="index.html"><FONT COLOR="BLACK">&uarr;Voltar ao inicio &uarr;</FONT></A>
+<A HREF="INFORMAÇÕES ADICIONAIS.html"><FONT COLOR="BLACK">Próximo</FONT></A> &rarr;
 <HR>
 
 </DIV>
