--- a/QUEM SOU EU.html
+++ b/QUEM SOU EU.html
@@ -65,7 +65,8 @@
 </UL>
 <HR>
 
-&larr; <A HREF="index.html"><FONT COLOR="BLACK">Voltar ao início</FONT></A>
+<A HREF="index.html"><FONT COLOR="BLACK">&uarr; Voltar ao inicio &uarr;</FONT></A>
+<A HREF="ESCOLARIDADE.html"><FONT COLOR="BLACK">Próximo &rarr;</FONT></A> 
 <HR>
 
 
