--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -45,7 +45,9 @@ Período - 06/2013 – 08/2014<BR>
 </UL>
 <HR>
 
-&larr; <A HREF="index.html"><FONT COLOR="BLACK">Voltar ao início</FONT></A>
+<A HREF="ESCOLARIDADE.html"><FONT COLOR="BLACK">&larr; Anterior</FONT></A>
+<A HREF="index.html"><FONT COLOR="BLACK">&uarr; Voltar ao início &uarr;</FONT></A>
+<A HREF="OBJETIVO PROFISSIONAL.html"><FONT COLOR="BLACK">Próximo</FONT></A> &rarr;
 <HR>
 
 </DIV>
