--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -13,6 +13,10 @@
 <HR> 
 <FONT SIZE="4">
 <UL>
+<U><B>Professor Substituto IFBA/SAJ </U></B><BR>
+Empresa: IFBA.<BR>
+Período - 06/2022 – ATUAL<BR><BR>
+ 
 <U><B>Professor Programador de Sistemas </U></B><BR>
 Empresa: SENAC.<BR>
 Período - 03/2022 – 06/2022<BR><BR>
@@ -31,7 +35,7 @@ Período - 02/2019 – 07/2019<BR><BR>
 
 <U><B>Web Design</U></B><BR>
 Empresa: Multivolts Segurança Eletrônica e Informática.<BR>
-Período - 05/2017 – Atual<BR><BR>
+Período - 05/2017 – 06/2022<BR><BR>
 
 <U><B>Analista de Vendas / Auxiliar de Vendas</U></B><BR>
 Empresa: Brasil Kirin - Vale das Palmeiras.<BR>
