--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -13,9 +13,17 @@
 <HR> 
 <FONT SIZE="4">
 <UL>
+<U><B>Professor Substituto UFRB/Cruz das Almas </U></B><BR>
+Empresa: <a href="https://sistemas.ufrb.edu.br/sigaa/public/docente/listagem_pids.jsf?siape=1298372"> UFRB.</a><BR>
+Período - 09/2024 – ATUAL<BR><BR>
+
+<U><B>Professor Programador Full Stack </U></B><BR>
+Empresa: SENAC.<BR>
+Período - 04/2025 – 07/2025<BR><BR>
+ 
 <U><B>Professor Substituto IFBA/SAJ </U></B><BR>
 Empresa: IFBA.<BR>
-Período - 06/2022 – ATUAL<BR><BR>
+Período - 06/2022 – 06/2024<BR><BR>
  
 <U><B>Professor Programador de Sistemas </U></B><BR>
 Empresa: SENAC.<BR>
