--- a/ESCOLARIDADE.html
+++ b/ESCOLARIDADE.html
@@ -15,13 +15,14 @@
 
 <FONT SIZE="4">
 
-<UL TYPE="SQUARE"><LI> Mestrado em Ciência da Computação. UEFS, Previsão de Conclusão em 2023.2</UL>
-<UL><LI> Pós-Graduação em Docência do Ensino Superior. FAVENI, Conclusão em 2020.2</UL>
-<UL><LI> Pós-Graduação em Tecnologia da Informação. FAVENI, Conclusão em 2020.2</UL>
-<UL><LI> Pós-Graduação em Coaching. FAVENI, Conclusão em 2020.2</UL>
-<UL><LI> Graduação em Produção Multimidia. Instituto Federal da Bahia – IFBA/SAJ, Previsão de Conclusão em 2023.1</UL>
-<UL><LI> Graduação em Administração. Centro Universitário Estácio de Sá, Conclusão em 2018.1</UL>
-<UL><LI> Graduação Tecnológica em Analise e Desenvolvimento de Sistemas. FACEMP, Conclusão em 2016.2</UL>
+<UL TYPE="SQUARE">
+<LI> Mestrado em Ciência da Computação. UEFS, Previsão de Conclusão em 2025.2
+<LI> Pós-Graduação em Docência do Ensino Superior. FAVENI, Conclusão em 2020.2
+<LI> Pós-Graduação em Tecnologia da Informação. FAVENI, Conclusão em 2020.2
+<LI> Pós-Graduação em Coaching. FAVENI, Conclusão em 2020.2
+<LI> Graduação em Produção Multimidia. Instituto Federal da Bahia – IFBA/SAJ, Previsão de Conclusão em 2025.2
+<LI> Graduação em Administração. Centro Universitário Estácio de Sá, Conclusão em 2018.1
+<LI> Graduação Tecnológica em Analise e Desenvolvimento de Sistemas. FACEMP, Conclusão em 2016.2
 <BR>
 </FONT>
 <HR>
