--- a/OBJETIVO PROFISSIONAL.html
+++ b/OBJETIVO PROFISSIONAL.html
@@ -14,8 +14,14 @@
 <BR>
 <FONT SIZE="5">
 <UL>
-Colaborar com a empresa/organização onde possa colocar em prática meus conhecimentos em favor da instituição na qual viso integrar, focando sempre o beneficio e o crescimento da organização e o crescimento profissional.		
-<BR>
+<p>Com uma paixão genuína pelo ofício de ensinar, meu objetivo profissional reside em inspirar e capacitar continuamente meus alunos, cultivando um ambiente de aprendizado dinâmico e apaixonante que transcende o currículo tradicional. A profunda satisfação de testemunhar o "brilho nos olhos" dos estudantes ao desvendarem novos conhecimentos e a rica troca de ideias que floresce em sala de aula alimentam minha dedicação diária. Acredito firmemente no poder da educação para moldar o futuro e anseio por contribuir ativamente para a formação integral de indivíduos curiosos, críticos e engajados.
+</p>
+<p>Movido por essa convicção e pelo crescente potencial da tecnologia na educação, busco aprimoramento constante através da obtenção do título de Doutor em Tecnologia da Informação e Educação Tecnológica. Essa jornada acadêmica visa não apenas aprofundar meu conhecimento, mas também me equipar com as ferramentas e a expertise necessárias para liderar projetos educacionais inovadores e significativos. Meu objetivo é desenvolver e implementar soluções tecnológicas criativas que promovam a colaboração, a autonomia e o protagonismo dos estudantes, tornando o aprendizado mais relevante, acessível e prazeroso.
+</p>
+<p>
+Almejo, assim, posicionar-me como uma referência inspiradora na área da educação tecnológica, influenciando outros professores a integrarem a tecnologia de forma eficaz em suas práticas pedagógicas. Acredito no poder multiplicador do compartilhamento de conhecimento e da disseminação de metodologias inovadoras. Desejo contagiar meus colegas com o entusiasmo pela transformação digital do ensino, mostrando como as ferramentas tecnológicas podem potencializar o aprendizado, enriquecer a experiência em sala de aula e preparar os alunos para os desafios e oportunidades do século XXI. Em última análise, meu propósito é contribuir ativamente para a construção de um ambiente educacional cada vez mais acolhedor, estimulante e eficaz, onde a paixão pelo aprendizado floresça tanto nos alunos quanto nos educadores.<BR>
+</p>
+
 </UL>
 </FONT>
 <BR>
