Update QUEM SOU EU.html
Atualização 1.2025

--- a/QUEM SOU EU.html
+++ b/QUEM SOU EU.html
@@ -18,10 +18,10 @@
 
 <UL>
 &nbsp;   Olá meu nome é Emerson Bomfim. <BR>
-&nbsp;   Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas costumo dizer que minha vida é um livro aberto, entao para que melhor que um site com tudo meu? <BR>
+&nbsp;   Aqui você vai encontrar um pouco de mim, quem sou eu, minhas experiencias profissionais, dentre outras coisas costumo dizer que minha vida é um livro aberto, então para que melhor do que um site com todas as minhas informações públicas?<BR>
 &nbsp;   Sou evangelico.<BR>
-&nbsp;   Tenho 27 anos.<BR>
-&nbsp;   Atualmente estou noivo da mulher mais linda do mundo, e breve iremos nos casar.<BR> 
+&nbsp;   Tenho 30 anos.<BR>
+&nbsp;   Sou casado com a mulher mais linda do mundo a 3 anos<BR> 
 &nbsp;   Nessa vida ja fiz um pouco de tudo:<BR>
 
 <UL>
@@ -40,12 +40,12 @@
 <LI>ajudante de pedreiro<BR>
 <LI>escritor<BR>
 <LI>estudante<BR>
-<LI>professor<BR>
 <LI>youtuber<BR>
+<LI><a href="OBJETIVO PROFISSIONAL.html">professor</a><BR>
 <LI>dentre outros<BR>
 </UL>
 
-&nbsp;   Hoje estou em uma empresa que estou mais para um faz tudo, aquele famoso bombril, e além disso atuo como professor.<BR>
+&nbsp;   Hoje atuo como professor substituto na Universidade Federal do Reconcavo da Bahia, além de coolaborar no SENAC como instrutor em cursos da area de tecnologia/programação, e atuar como professor em projetos de extensão do IFBA-SAJ. Estou estagiando referente ao Mestrado em Ciência da Computação na UEFS. Tenho feitos concursos e processos seletivos em busca de me tornar professor efetivo.<BR>
 &nbsp;   O que me anima? Estar na presença de DEUS em todo o tempo.<BR>
 &nbsp;   O que não me deixa desistir? DEUS.<BR>
 &nbsp;   Como mantenho tanta atividade sem enlouquecer, e dar conta de tudo? A unica explicação que tenho é que se não fosse DEUS na minha vida, eu nada saberia e nem poderia fazer. 
@@ -59,7 +59,9 @@
 <UL>
 <FONT SIZE="4">
 &nbsp;  DEIXE AQUI ALGUMA PERGUNTA SOBRE MIM QUE VOCÊ AINDA TENHA CURIOSIDADE E VOLTE DENTRO DE 24H QUE ESTAREI RESPONDENDO.<BR>
+ 
 <I>OBS.: BREVE VOCÊ PODERÁ ENVIAR SUA PERGUNTA.</I>
+<p> Enquanto isso pode falar comigo no <a href="https://wa.me/message/4F6PYJGQDD4MO1"><I> WhatsApp</I></a></p>
 </FONT>
 <BR><BR>
 </UL>
