--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -17,6 +17,14 @@
 Empresa: <a href="https://sistemas.ufrb.edu.br/sigaa/public/docente/listagem_pids.jsf?siape=1298372"> UFRB.</a><BR>
 Período - 09/2024 – ATUAL<BR><BR>
 
+<U><B>Professor do <A HREF="https://portal.ifba.edu.br/santoantonio/menu-extensao/programa-manuel-querino-de-qualificacao-social-e-profissional-1">Projeto de Extensão PMQ </A></U></B><BR>
+Empresa: IFBA-SAJ.<BR>
+Período - 11/2024 – 05/2025<BR><BR>
+ 
+<U><B>Professor Estagiario </U></B><BR>
+Empresa: UEFS.<BR>
+Período - 03/2025 – 06/2025<BR><BR>
+ 
 <U><B>Professor Programador Full Stack </U></B><BR>
 Empresa: SENAC.<BR>
 Período - 04/2025 – 07/2025<BR><BR>
