Update QUEM SOU EU.html
Atualização 2.2025

--- a/QUEM SOU EU.html
+++ b/QUEM SOU EU.html
@@ -45,7 +45,7 @@
 <LI>dentre outros<BR>
 </UL>
 
-&nbsp;   Hoje atuo como professor substituto na Universidade Federal do Reconcavo da Bahia, além de coolaborar no SENAC como instrutor em cursos da area de tecnologia/programação, e atuar como professor em projetos de extensão do IFBA-SAJ. Estou estagiando referente ao Mestrado em Ciência da Computação na UEFS. Tenho feitos concursos e processos seletivos em busca de me tornar professor efetivo.<BR>
+&nbsp;   Hoje atuo como professor substituto na Universidade Federal do Reconcavo da Bahia, além de colaborar no SENAC como instrutor em cursos da area de tecnologia/programação e atuar como professor em projetos de extensão do IFBA-SAJ. Estou estagiando referente ao Mestrado em Ciência da Computação na UEFS. Tenho feitos concursos e processos seletivos em busca de me tornar professor efetivo.<BR>
 &nbsp;   O que me anima? Estar na presença de DEUS em todo o tempo.<BR>
 &nbsp;   O que não me deixa desistir? DEUS.<BR>
 &nbsp;   Como mantenho tanta atividade sem enlouquecer, e dar conta de tudo? A unica explicação que tenho é que se não fosse DEUS na minha vida, eu nada saberia e nem poderia fazer. 
@@ -61,7 +61,7 @@
 &nbsp;  DEIXE AQUI ALGUMA PERGUNTA SOBRE MIM QUE VOCÊ AINDA TENHA CURIOSIDADE E VOLTE DENTRO DE 24H QUE ESTAREI RESPONDENDO.<BR>
  
 <I>OBS.: BREVE VOCÊ PODERÁ ENVIAR SUA PERGUNTA.</I>
-<p> Enquanto isso pode falar comigo no <a href="https://wa.me/message/4F6PYJGQDD4MO1"><I> WhatsApp</I></a></p>
+<p> Enquanto isso, você pode falar comigo no <a href="https://wa.me/message/71992751859"><I> WhatsApp</I></a></p>
 </FONT>
 <BR><BR>
 </UL>
