--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
  <META CHARSET="utf-8">
-<TITLE>EXPERIÊNCIA PROFISSIONAL</TITLE>
+<TITLE>EXPERIÊNCIAS PROFISSIONAIS</TITLE>
 
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
@@ -9,12 +9,12 @@
 
 <DIV class=fundo1>
 
-<H1>EXPERIÊNCIA PROFISSIONAL</H1>
+<H1>EXPERIÊNCIAS PROFISSIONAIS</H1>
 <HR> 
 <FONT SIZE="4">
 <UL>
-<U><B>Professor Substituto UFRB/Cruz das Almas </U></B><BR>
-Empresa: <a href="https://sistemas.ufrb.edu.br/sigaa/public/docente/listagem_pids.jsf?siape=1298372"> UFRB.</a><BR>
+<U><B>Professor <a href="https://sistemas.ufrb.edu.br/sigaa/public/docente/listagem_pids.jsf?siape=1298372"> Substituto UFRB/Cruz das Almas </a></U></B><BR>
+Empresa: UFRB.<BR>
 Período - 09/2024 – ATUAL<BR><BR>
 
 <U><B>Professor do <A HREF="https://portal.ifba.edu.br/santoantonio/menu-extensao/programa-manuel-querino-de-qualificacao-social-e-profissional-1">Projeto de Extensão PMQ </A></U></B><BR>
