--- a/ESCOLARIDADE.html
+++ b/ESCOLARIDADE.html
@@ -4,6 +4,7 @@
 <TITLE>ESCOLARIDADE</TITLE>
 
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
+<link rel="icon" href="icone.jpg">
 </HEAD>
 <BODY>
 
