--- a/EXPERIENCIAS.html
+++ b/EXPERIENCIAS.html
@@ -2,7 +2,7 @@
 <HEAD>
  <META CHARSET="utf-8">
 <TITLE>EXPERIÊNCIAS PROFISSIONAIS</TITLE>
-
+<link rel="icon" href="icone.jpg">
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
 <BODY>
