--- a/IMAGEM.html
+++ b/IMAGEM.html
@@ -2,7 +2,7 @@
 <META CHARSET="UTF-8">
 <HEAD>
 <TITLE>IMAGEM</TITLE>
-
+<link rel="icon" href="icone.jpg">
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
 
