--- a/INFORMAÇÕES ADICIONAIS.html
+++ b/INFORMAÇÕES ADICIONAIS.html
@@ -3,7 +3,7 @@
  <META CHARSET="utf-8">
 <TITLE>INFORMAÇÕES ADICIONAIS</TITLE>
 
-
+<link rel="icon" href="icone.jpg">
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
 <BODY>
