--- a/OBJETIVO PROFISSIONAL.html
+++ b/OBJETIVO PROFISSIONAL.html
@@ -3,7 +3,7 @@
  <META CHARSET="utf-8">
 <TITLE>OBJETIVO PROFISSIONAL</TITLE>
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
-
+<link rel="icon" href="icone.jpg">
 </HEAD>
 <BODY>
 <DIV class=fundo1>
