Update QUEM SOU EU.html
Atualização 04.2025

--- a/QUEM SOU EU.html
+++ b/QUEM SOU EU.html
@@ -2,7 +2,7 @@
 <HEAD>
  <META CHARSET="utf-8">
 <TITLE>QUEM SOU EU?</TITLE>
-
+<link rel="icon" href="icone.jpg">
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
 </HEAD>
 
