--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <META CHARSET="utf-8">
 <TITLE>Menu</TITLE>
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
-
+<link rel="icon" href="icone.jpg">
 </HEAD>
 
 <BODY >
@@ -45,7 +45,7 @@
 <DIV CLASS=preto>
 
 <BR>
-<P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2022 - EMERSON BOMFIM </FONT><BR></P></DIV>
+<P ALIGN="CENTER"><FONT COLOR="WHITE" SIZE="3">Copyright © 2025 - EMERSON BOMFIM </FONT><BR></P></DIV>
 
 </BODY>
 </HTML>	
