--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
  <META CHARSET="utf-8">
 <TITLE>Menu</TITLE>
 <link rel="stylesheet" type="text/css" href="estilo.css"/>
-
+<link rel="icon" href="icone.jpg">
 </HEAD>
 
 <BODY style="background-color:#40E0D0;">
